// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`NavItem renders active 1`] = `
<DocumentFragment>
  <div
    class="navBar__item nav-item"
  >
    <a
      class="nav-link active"
      data-cy="navBarLinknamewithemptyspace"
      href="link"
    >
      name with empty space
    </a>
  </div>
</DocumentFragment>
`;

exports[`NavItem renders default (inactive) 1`] = `
<DocumentFragment>
  <div
    class="navBar__item nav-item"
  >
    <a
      class="nav-link"
      data-cy="navBarLinkname"
      href="link"
    >
      name
    </a>
  </div>
</DocumentFragment>
`;
